# cryptowatch

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/api/binance/: ws.rs
src/ui/: dashboard.rs
src/ui/core/: alerts.rs
