[package]
name = "cryptowatch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
futures-util = "0.3.31"
tui = "0.19"
crossterm = "0.26"
ratatui = "0.23"
chrono = "0.4"
num-format = "0.4"
num = "0.4.3"